# Object-Oriented-Programming-24-25

./: .gitignore  CMakeLists.txt  README.md
aud_24-25/aud1/: zad1.cpp  zad2.cpp  zad3.cpp
aud_24-25/aud2/: zad1.cpp  zad2.cpp
aud_24-25/aud3/: zad1.cpp  zad2.cpp  zad3.cpp
aud_24-25/aud5/: zad1.cpp
aud_24-25/aud_prv_kolokvium/: zad1_prv_aud_stefan_no_main.cpp  zad1_prv_kolokvium_aud_no_main.cpp  zad2_prv_aud_stefan.cpp  zad2_prv_aud_stefan_with_main.cpp  zad_kval_prv_kolokvium_aud.cpp
aud_24-25/aud_stefan_08-05-2025/: zad1.cpp  zad2.cpp  zad3.cpp
aud_24-25/aud_vtor_kolokvium/: zad2_vtor_kolokvium.cpp
aud_24-25/ispitni_eng/: vtor_kolok_zad1_eng.cpp  vtor_kolok_zad24_eng.cpp  vtor_kolok_zad2_eng.cpp  vtor_kolok_zad4_eng.cpp  vtor_kolok_zad6_eng.cpp
aud_24-25/ispitni_mk/: vtor_kolok_zad1.cpp  vtor_kolok_zad3.cpp  vtor_kolok_zad4.cpp  vtor_kolok_zad6.cpp
aud_24-25/kvali_ispiti/: zad1_kvali_isp.cpp
aud_24-25/kvali_ispiti_courses/: zad1_kvali_isp.cpp  zad3_kvali_isp.cpp  zad6_kvali_isp.cpp  zad7_kvali_isp.cpp  zad8_kvali_isp.cpp  zad9_kvali_isp.cpp
aud_24-25/kvali_prv_kolok_courses/: zad1_kvali_kolok.cpp  zad3_kvali_kolok.cpp  zad4_kvali_firstmidterm.cpp  zad4_kvali_kolok.cpp  zad5_kvali_firstmidterm.cpp  zad5_kvali_kolok.cpp  zad6_kvali_kolok.cpp
aud_24-25/kvali_prvkolok/: zad2_kvali_kolok.cpp
aud_24-25/labs_24-25/: labs1.2.cpp  labs1.3.cpp  labs2.3.cpp  labs3.1.cpp  labs3.2.cpp  labs3.4.cpp  labs3.5.cpp  labs4.1.cpp  labs4.2.cpp  labs4.3.cpp  labs6.2.cpp  labs7.1.cpp  labs7.4.cpp  labs_vjet.cpp
aud_24-25/prv_kolok_zad_courses/: prv_kolok_zad1.cpp  prv_kolok_zad12.cpp  prv_kolok_zad14.cpp  prv_kolok_zad2.cpp  prv_kolok_zad4.cpp  prv_kolok_zad5.cpp  zad1_eng.cpp
aud_online/aud1/: aud3.cpp
aud_online/aud2/: aud5.cpp
aud_online/aud3/: aud7.cpp  aud8.cpp  aud9.cpp
aud_online/aud4/: aud14.cpp  aud15.cpp
aud_online/aud5/: aud16.cpp
aud_online/aud6/: aud19.cpp  aud20.cpp  aud24.cpp
aud_online/aud8/: aud28.cpp
aud_online/aud9-files/: aud39.cpp  aud40.cpp  aud43.cpp
aud_online/kolokviumski/: aud11.cpp  aud32.cpp
aud_online/kvali-sept/: aud21.cpp  aud22.cpp  aud23.cpp
aud_online/labs_courses/: aud34.cpp  aud35.cpp  aud38.cpp  aud51.cpp  aud61.cpp
aud_stefan_08-05-2025/: zad1.cpp  zad3.cpp
aud_stefan_15-05-2025/: input.txt  zad1.cpp  zad2.cpp  zad3.cpp
ispitni_eng/: vtor_kolok_zad10_eng.cpp  vtor_kolok_zad11_eng.cpp  vtor_kolok_zad12_eng.cpp  vtor_kolok_zad13_eng.cpp  vtor_kolok_zad14_eng.cpp  vtor_kolok_zad15_eng.cpp  vtor_kolok_zad16_eng.cpp  vtor_kolok_zad17_eng.cpp  vtor_kolok_zad18_eng.cpp  vtor_kolok_zad19_eng.cpp  vtor_kolok_zad1_eng.cpp  vtor_kolok_zad21_eng.cpp  vtor_kolok_zad22_eng.cpp  vtor_kolok_zad23_eng.cpp  vtor_kolok_zad24_eng.cpp  vtor_kolok_zad25_eng.cpp  vtor_kolok_zad26_eng.cpp  vtor_kolok_zad27_eng.cpp  vtor_kolok_zad28_eng.cpp  vtor_kolok_zad2_eng.cpp  vtor_kolok_zad3_eng.cpp  vtor_kolok_zad5_eng.cpp  vtor_kolok_zad6_eng.cpp  vtor_kolok_zad7_eng.cpp  vtor_kolok_zad8_eng.cpp  vtor_kolok_zad9_eng.cpp
ispitni_mk/: vtor_kolok_zad10.cpp  vtor_kolok_zad11.cpp  vtor_kolok_zad12.cpp  vtor_kolok_zad13.cpp  vtor_kolok_zad14.cpp  vtor_kolok_zad15.cpp  vtor_kolok_zad16.cpp  vtor_kolok_zad17.cpp  vtor_kolok_zad2.cpp  vtor_kolok_zad3.cpp  vtor_kolok_zad4.cpp  vtor_kolok_zad5.cpp  vtor_kolok_zad7.cpp  vtor_kolok_zad8.cpp  vtor_kolok_zad9.cpp
kvali_ispiti_courses/: zad2_kvali_isp.cpp  zad4_kvali_isp.cpp  zad5_kvali_isp.cpp
kvali_prv_kolok_courses/: zad1_kvali_firstmidterm.cpp  zad2_kvali_firstmidterm.cpp  zad3_kvali_firstmidterm.cpp  zad6_kvali_firstmidterm.cpp
labs_24-25/: labs1.1.cpp  labs2.1.cpp  labs2.2.cpp  labs3.1.cpp  labs3.2.cpp  labs3.3.cpp  labs4.4.cpp  labs4.5.cpp  labs5.1.cpp  labs5.2.cpp  labs5.3.cpp  labs5.4.cpp  labs6.1.cpp  labs7.2.cpp  labs7.3.cpp  labs7.5.cpp  labs8.1.cpp  labs8.2.cpp  labs9.1.cpp  labs9.2.cpp  labs9.3.cpp  labs9.4.cpp
oop_jan_ispitna/: ispitna1.cpp  ispitna10.cpp  ispitna14.cpp  ispitna15.cpp  ispitna18_eng.cpp  ispitna19_eng.cpp  ispitna22_eng.cpp  ispitna26_eng.cpp  ispitna27_eng.cpp  ispitna28_eng.cpp  ispitna29_eng.cpp  ispitna3.cpp  ispitna31_eng.cpp  ispitna33_eng.cpp  ispitna37_eng.cpp  ispitna39_eng.cpp  ispitna5.cpp  ispitna8.cpp  ispitna9.cpp  ispitna_sesija_sept_zad2.cpp
pldh/: prva.txt  treta.txt  vtora.txt
pldh/aud_online/aud1/: aud1.cpp  aud2.cpp
pldh/aud_online/aud2/: aud4.cpp  aud6.cpp
pldh/aud_online/aud3/: aud10.cpp
pldh/aud_online/aud5/: aud17.cpp
pldh/aud_online/aud6/: aud18.cpp
pldh/aud_online/aud7/: aud25.cpp  aud26.cpp  aud27.cpp
pldh/aud_online/aud8/: aud29.cpp  aud30.cpp
pldh/aud_online/kolokviumski/: aud12.cpp  aud13.cpp  aud31.cpp
pldh/aud_online/kvali-sept/: aud21.cpp
pldh/aud_online/labs_courses/: aud33.cpp  aud36.cpp  aud37.cpp
pldh/oop_jan_ispitna/: ispitna11.cpp  ispitna12.cpp  ispitna13.cpp  ispitna16.cpp  ispitna18_eng.cpp  ispitna2.cpp  ispitna20_eng.cpp  ispitna21_eng.cpp  ispitna23_eng.cpp  ispitna25_eng.cpp  ispitna30_eng.cpp  ispitna32_eng.cpp  ispitna34_eng.cpp  ispitna38_eng.cpp  ispitna4.cpp  ispitna6.cpp  ispitna7.cpp  ispitna_sesija_sept_zad1.cpp
prv_kolok_zad_courses/: prv_kolok_zad1.cpp  prv_kolok_zad11.cpp  prv_kolok_zad13.cpp  prv_kolok_zad14.cpp  prv_kolok_zad15.cpp  prv_kolok_zad16.cpp  prv_kolok_zad17.cpp  prv_kolok_zad18.cpp  prv_kolok_zad19.cpp  prv_kolok_zad20.cpp  prv_kolok_zad21.cpp  prv_kolok_zad22.cpp  prv_kolok_zad3.cpp  prv_kolok_zad4.cpp  prv_kolok_zad6.cpp  prv_kolok_zad8.cpp
zad_lani_juni_ispit_23-24/: zad1.cpp  zad2.cpp
zad_lani_vtor_kolokvium_23-24/: zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp
