cmake_minimum_required(VERSION 3.29)
project(oop23_24)

set(CMAKE_CXX_STANDARD 20)

add_executable(labs_vjet aud_24-25/labs_24-25/labs_vjet.cpp)
add_executable(labs1.1 aud_24-25/labs_24-25/labs1.1.cpp)
add_executable(labs1.2 aud_24-25/labs_24-25/labs1.2.cpp)
add_executable(labs1.3 aud_24-25/labs_24-25/labs1.3.cpp)

add_executable(aud1.1 aud_24-25/aud1/zad1.cpp)
add_executable(aud1.2 aud_24-25/aud1/zad2.cpp)
add_executable(aud1.3 aud_24-25/aud1/zad3.cpp)

add_executable(aud2.1 aud_24-25/aud2/zad1.cpp)
add_executable(aud2.2 aud_24-25/aud2/zad2.cpp)
add_executable(aud2.3 aud_24-25/aud2/zad3.cpp)

add_executable(aud3.1 aud_24-25/aud3/zad1.cpp)
add_executable(aud3.2 aud_24-25/aud3/zad2.cpp)
add_executable(aud3.3 aud_24-25/aud3/zad3.cpp)

add_executable(aud4.1 aud_24-25/aud4/zad1.cpp)
add_executable(aud4.2 aud_24-25/aud4/zad2.cpp)
add_executable(aud4.3 aud_24-25/aud4/zad3.cpp)

add_executable(aud5.1 aud_24-25/aud5/zad1.cpp)
add_executable(aud5.2 aud_24-25/aud5/zad2.cpp)
add_executable(aud5.3 aud_24-25/aud5/zad3.cpp)

add_executable(aud6.1 aud_24-25/aud6/zad1.cpp)
add_executable(aud6.2 aud_24-25/aud6/zad2.cpp)
add_executable(aud6.3 aud_24-25/aud6/zad3.cpp)

add_executable(aud7.1 aud_24-25/aud7/zad1.cpp)
add_executable(aud7.2 aud_24-25/aud7/zad2.cpp)
add_executable(aud7.3 aud_24-25/aud7/zad3.cpp)

add_executable(aud8.1 aud_24-25/aud8/zad1.cpp)
add_executable(aud8.2 aud_24-25/aud8/zad2.cpp)
add_executable(aud8.3 aud_24-25/aud8/zad3.cpp)

add_executable(aud9.1 aud_24-25/aud9/zad1.cpp)
add_executable(aud9.2 aud_24-25/aud9/zad2.cpp)
add_executable(aud9.3 aud_24-25/aud9/zad3.cpp)

add_executable(aud10.1 aud_24-25/aud10/zad1.cpp)
add_executable(aud10.2 aud_24-25/aud10/zad2.cpp)
add_executable(aud10.3 aud_24-25/aud10/zad3.cpp)

add_executable(zad1_kvali aud_24-25/kvali_prv_kolok_courses/zad1_kvali_kolok.cpp)
add_executable(zad2_kvali aud_24-25/kvali_prv_kolok_courses/zad2_kvali_kolok.cpp)
add_executable(zad3_kvali aud_24-25/kvali_prv_kolok_courses/zad3_kvali_kolok.cpp)
add_executable(zad4_kvali aud_24-25/kvali_prv_kolok_courses/zad4_kvali_kolok.cpp)
add_executable(zad5_kvali aud_24-25/kvali_prv_kolok_courses/zad5_kvali_kolok.cpp)
add_executable(zad6_kvali aud_24-25/kvali_prv_kolok_courses/zad6_kvali_kolok.cpp)

add_executable(prv_kolok_zad1 aud_24-25/prv_kolok_zad_courses/prv_kolok_zad1.cpp)
add_executable(prv_kolok_zad2 aud_24-25/prv_kolok_zad_courses/prv_kolok_zad2.cpp)
add_executable(prv_kolok_zad3 aud_24-25/prv_kolok_zad_courses/prv_kolok_zad3.cpp)
add_executable(prv_kolok_zad4 aud_24-25/prv_kolok_zad_courses/prv_kolok_zad4.cpp)
add_executable(prv_kolok_zad5 aud_24-25/prv_kolok_zad_courses/prv_kolok_zad5.cpp)
add_executable(prv_kolok_zad6 aud_24-25/prv_kolok_zad_courses/prv_kolok_zad6.cpp)
add_executable(prv_kolok_zad7 aud_24-25/prv_kolok_zad_courses/prv_kolok_zad7.cpp)
add_executable(prv_kolok_zad8 aud_24-25/prv_kolok_zad_courses/prv_kolok_zad8.cpp)
add_executable(prv_kolok_zad9 aud_24-25/prv_kolok_zad_courses/prv_kolok_zad9.cpp)
add_executable(prv_kolok_zad10 aud_24-25/prv_kolok_zad_courses/prv_kolok_zad10.cpp)
add_executable(prv_kolok_zad11 aud_24-25/prv_kolok_zad_courses/prv_kolok_zad11.cpp)
add_executable(prv_kolok_zad12 aud_24-25/prv_kolok_zad_courses/prv_kolok_zad12.cpp)
add_executable(prv_kolok_zad13 aud_24-25/prv_kolok_zad_courses/prv_kolok_zad13.cpp)
add_executable(prv_kolok_zad14 aud_24-25/prv_kolok_zad_courses/prv_kolok_zad14.cpp)
add_executable(prv_kolok_zad15 aud_24-25/prv_kolok_zad_courses/prv_kolok_zad15.cpp)
add_executable(prv_kolok_zad16 aud_24-25/prv_kolok_zad_courses/prv_kolok_zad16.cpp)
add_executable(prv_kolok_zad17 aud_24-25/prv_kolok_zad_courses/prv_kolok_zad17.cpp)
add_executable(prv_kolok_zad18 aud_24-25/prv_kolok_zad_courses/prv_kolok_zad18.cpp)
add_executable(prv_kolok_zad19 aud_24-25/prv_kolok_zad_courses/prv_kolok_zad19.cpp)
add_executable(prv_kolok_zad20 aud_24-25/prv_kolok_zad_courses/prv_kolok_zad20.cpp)
add_executable(prv_kolok_zad21 aud_24-25/prv_kolok_zad_courses/prv_kolok_zad21.cpp)
add_executable(prv_kolok_zad22 aud_24-25/prv_kolok_zad_courses/prv_kolok_zad22.cpp)

add_executable(zad1_kvali_isp aud_24-25/kvali_ispiti_courses/zad1_kvali_isp.cpp)
add_executable(zad2_kvali_isp aud_24-25/kvali_ispiti_courses/zad2_kvali_isp.cpp)
add_executable(zad3_kvali_isp aud_24-25/kvali_ispiti_courses/zad3_kvali_isp.cpp)
add_executable(zad4_kvali_isp aud_24-25/kvali_ispiti_courses/zad4_kvali_isp.cpp)
add_executable(zad5_kvali_isp aud_24-25/kvali_ispiti_courses/zad5_kvali_isp.cpp)
add_executable(zad6_kvali_isp aud_24-25/kvali_ispiti_courses/zad6_kvali_isp.cpp)
add_executable(zad7_kvali_isp aud_24-25/kvali_ispiti_courses/zad7_kvali_isp.cpp)
add_executable(zad8_kvali_isp aud_24-25/kvali_ispiti_courses/zad8_kvali_isp.cpp)
add_executable(zad9_kvali_isp aud_24-25/kvali_ispiti_courses/zad9_kvali_isp.cpp)