cmake_minimum_required(VERSION 3.29)
project(oop23_24)

set(CMAKE_CXX_STANDARD 20)

#labs
add_executable(labs_vjet aud_24-25/labs_24-25/labs_vjet.cpp)
add_executable(labs1.1 aud_24-25/labs_24-25/labs1.1.cpp)
add_executable(labs1.2 aud_24-25/labs_24-25/labs1.2.cpp)
add_executable(labs1.3 aud_24-25/labs_24-25/labs1.3.cpp)

add_executable(labs2.1 aud_24-25/labs_24-25/labs2.1.cpp)
add_executable(labs2.2 aud_24-25/labs_24-25/labs2.2.cpp)
add_executable(labs2.3 aud_24-25/labs_24-25/labs2.3.cpp)

add_executable(labs3.1 aud_24-25/labs_24-25/labs3.1.cpp)
add_executable(labs3.2 aud_24-25/labs_24-25/labs3.2.cpp)
add_executable(labs3.3 aud_24-25/labs_24-25/labs3.3.cpp)
add_executable(labs3.4 aud_24-25/labs_24-25/labs3.4.cpp)
add_executable(labs3.5 aud_24-25/labs_24-25/labs3.5.cpp)

add_executable(labs4.1 aud_24-25/labs_24-25/labs4.1.cpp)
add_executable(labs4.2 aud_24-25/labs_24-25/labs4.2.cpp)
add_executable(labs4.3 aud_24-25/labs_24-25/labs4.3.cpp)
add_executable(labs4.4 aud_24-25/labs_24-25/labs4.4.cpp)
add_executable(labs4.5 aud_24-25/labs_24-25/labs4.5.cpp)

add_executable(labs5.1 aud_24-25/labs_24-25/labs5.1.cpp)
add_executable(labs5.2 aud_24-25/labs_24-25/labs5.2.cpp)
add_executable(labs5.3 aud_24-25/labs_24-25/labs5.3.cpp)
add_executable(labs5.4 aud_24-25/labs_24-25/labs5.4.cpp)

add_executable(labs6.1 aud_24-25/labs_24-25/labs6.1.cpp)
add_executable(labs6.2 aud_24-25/labs_24-25/labs6.2.cpp)

add_executable(labs7.1 aud_24-25/labs_24-25/labs7.1.cpp)
add_executable(labs7.2 aud_24-25/labs_24-25/labs7.2.cpp)
add_executable(labs7.3 aud_24-25/labs_24-25/labs7.3.cpp)
add_executable(labs7.4 aud_24-25/labs_24-25/labs7.4.cpp)
add_executable(labs7.5 aud_24-25/labs_24-25/labs7.5.cpp)
add_executable(labs7.6 aud_24-25/labs_24-25/labs7.6.cpp)


#aud
add_executable(aud1.1 aud_24-25/aud1/zad1.cpp)
add_executable(aud1.2 aud_24-25/aud1/zad2.cpp)
add_executable(aud1.3 aud_24-25/aud1/zad3.cpp)

add_executable(aud2.1 aud_24-25/aud2/zad1.cpp)
add_executable(aud2.2 aud_24-25/aud2/zad2.cpp)
add_executable(aud2.3 aud_24-25/aud2/zad3.cpp)

add_executable(aud3.1 aud_24-25/aud3/zad1.cpp)
add_executable(aud3.2 aud_24-25/aud3/zad2.cpp)
add_executable(aud3.3 aud_24-25/aud3/zad3.cpp)

add_executable(aud4.1 aud_24-25/aud4/zad1.cpp)
add_executable(aud4.2 aud_24-25/aud4/zad2.cpp)
add_executable(aud4.3 aud_24-25/aud4/zad3.cpp)

add_executable(aud5.1 aud_24-25/aud5/zad1.cpp)
add_executable(aud5.2 aud_24-25/aud5/zad2.cpp)
add_executable(aud5.3 aud_24-25/aud5/zad3.cpp)

add_executable(aud6.1 aud_24-25/aud_stefan_08-05-2025/zad1.cpp)
add_executable(aud6.2 aud_24-25/aud_stefan_08-05-2025/zad2.cpp)
add_executable(aud6.3 aud_24-25/aud_stefan_08-05-2025/zad3.cpp)

add_executable(aud7.1 aud_24-25/aud7/zad1.cpp)
add_executable(aud7.2 aud_24-25/aud7/zad2.cpp)
add_executable(aud7.3 aud_24-25/aud7/zad3.cpp)

add_executable(aud8.1 aud_24-25/aud8/zad1.cpp)
add_executable(aud8.2 aud_24-25/aud8/zad2.cpp)
add_executable(aud8.3 aud_24-25/aud8/zad3.cpp)

add_executable(aud9.1 aud_24-25/aud9/zad1.cpp)
add_executable(aud9.2 aud_24-25/aud9/zad2.cpp)
add_executable(aud9.3 aud_24-25/aud9/zad3.cpp)

#aud per kolokviume
add_executable(zad_kval_prv_kolokvium_aud aud_24-25/aud_prv_kolokvium/zad_kval_prv_kolokvium_aud.cpp)
add_executable(zad1_prv_kolokvium_aud_no_main aud_24-25/aud_prv_kolokvium/zad1_prv_kolokvium_aud_no_main.cpp)
add_executable(zad2_prv_kolokvium_aud_with_main aud_24-25/aud_prv_kolokvium/zad2_prv_kolokvium_aud_with_main.cpp)

add_executable(zad1_vtor_kolokvium aud_24-25/aud_vtor_kolokvium/zad1_vtor_kolokvium.cpp)
add_executable(zad2_vtor_kolokvium aud_24-25/aud_vtor_kolokvium/zad2_vtor_kolokvium.cpp)
add_executable(zad3_vtor_kolokvium aud_24-25/aud_vtor_kolokvium/zad3_vtor_kolokvium.cpp)

#kvalifikaciski za kolokvium resheni
add_executable(zad1_kvali_firstmidterm aud_24-25/kvali_prv_kolok_courses/zad1_kvali_firstmidterm.cpp)
add_executable(zad2_kvali_firstmidterm aud_24-25/kvali_prv_kolok_courses/zad2_kvali_firstmidterm.cpp)
add_executable(zad3_kvali_firstmidterm aud_24-25/kvali_prv_kolok_courses/zad3_kvali_firstmidterm.cpp)
add_executable(zad4_kvali_firstmidterm aud_24-25/kvali_prv_kolok_courses/zad4_kvali_firstmidterm.cpp)
add_executable(zad5_kvali_firstmidterm aud_24-25/kvali_prv_kolok_courses/zad5_kvali_firstmidterm.cpp)
add_executable(zad6_kvali_firstmidterm aud_24-25/kvali_prv_kolok_courses/zad6_kvali_firstmidterm.cpp)

#kolokviumski resheni
add_executable(prv_kolok_zad1 aud_24-25/prv_kolok_zad_courses/prv_kolok_zad1.cpp)
add_executable(prv_kolok_zad2 aud_24-25/prv_kolok_zad_courses/prv_kolok_zad2.cpp)
add_executable(prv_kolok_zad3 aud_24-25/prv_kolok_zad_courses/prv_kolok_zad3.cpp)
add_executable(prv_kolok_zad4 aud_24-25/prv_kolok_zad_courses/prv_kolok_zad4.cpp)
add_executable(prv_kolok_zad5 aud_24-25/prv_kolok_zad_courses/prv_kolok_zad5.cpp)
add_executable(prv_kolok_zad6 aud_24-25/prv_kolok_zad_courses/prv_kolok_zad6.cpp)
add_executable(prv_kolok_zad7 aud_24-25/prv_kolok_zad_courses/zad1_eng.cpp)
add_executable(prv_kolok_zad8 aud_24-25/prv_kolok_zad_courses/prv_kolok_zad8.cpp)
add_executable(prv_kolok_zad9 aud_24-25/prv_kolok_zad_courses/prv_kolok_zad9.cpp)
add_executable(prv_kolok_zad10 aud_24-25/prv_kolok_zad_courses/prv_kolok_zad10.cpp)
add_executable(prv_kolok_zad11 aud_24-25/prv_kolok_zad_courses/prv_kolok_zad11.cpp)
add_executable(prv_kolok_zad12 aud_24-25/prv_kolok_zad_courses/prv_kolok_zad12.cpp)
add_executable(prv_kolok_zad13 aud_24-25/prv_kolok_zad_courses/prv_kolok_zad13.cpp)
add_executable(prv_kolok_zad14 aud_24-25/prv_kolok_zad_courses/prv_kolok_zad14.cpp)
add_executable(prv_kolok_zad15 aud_24-25/prv_kolok_zad_courses/prv_kolok_zad15.cpp)
add_executable(prv_kolok_zad16 aud_24-25/prv_kolok_zad_courses/prv_kolok_zad16.cpp)
add_executable(prv_kolok_zad17 aud_24-25/prv_kolok_zad_courses/prv_kolok_zad17.cpp)
add_executable(prv_kolok_zad18 aud_24-25/prv_kolok_zad_courses/prv_kolok_zad18.cpp)
add_executable(prv_kolok_zad19 aud_24-25/prv_kolok_zad_courses/prv_kolok_zad19.cpp)
add_executable(prv_kolok_zad20 aud_24-25/prv_kolok_zad_courses/prv_kolok_zad20.cpp)
add_executable(prv_kolok_zad21 aud_24-25/prv_kolok_zad_courses/prv_kolok_zad21.cpp)
add_executable(prv_kolok_zad22 aud_24-25/prv_kolok_zad_courses/prv_kolok_zad22.cpp)

#kvalifikaciski za ispit resheni
add_executable(zad1_kvali_isp aud_24-25/kvali_ispiti_courses/zad1_kvali_isp.cpp)
add_executable(zad2_kvali_isp aud_24-25/kvali_ispiti_courses/zad2_kvali_isp.cpp)
add_executable(zad3_kvali_isp aud_24-25/kvali_ispiti_courses/zad3_kvali_isp.cpp)
add_executable(zad4_kvali_isp aud_24-25/kvali_ispiti_courses/zad4_kvali_isp.cpp)
add_executable(zad5_kvali_isp aud_24-25/kvali_ispiti_courses/zad5_kvali_isp.cpp)
add_executable(zad6_kvali_isp aud_24-25/kvali_ispiti_courses/zad6_kvali_isp.cpp)
add_executable(zad7_kvali_isp aud_24-25/kvali_ispiti_courses/zad7_kvali_isp.cpp)
add_executable(zad8_kvali_isp aud_24-25/kvali_ispiti_courses/zad8_kvali_isp.cpp)
add_executable(zad9_kvali_isp aud_24-25/kvali_ispiti_courses/zad9_kvali_isp.cpp)

#vtor kolokvium and ispitni courses resheni (mk)
add_executable(vtor_kolok_zad1 aud_24-25/ispitni_mk/vtor_kolok_zad1.cpp)
add_executable(vtor_kolok_zad2 aud_24-25/ispitni_mk/vtor_kolok_zad2.cpp)
add_executable(vtor_kolok_zad3 aud_24-25/ispitni_mk/vtor_kolok_zad3.cpp)
add_executable(vtor_kolok_zad4 aud_24-25/ispitni_mk/vtor_kolok_zad4.cpp)
add_executable(vtor_kolok_zad5 aud_24-25/ispitni_mk/vtor_kolok_zad5.cpp)
add_executable(vtor_kolok_zad6 aud_24-25/ispitni_mk/vtor_kolok_zad6.cpp)
add_executable(vtor_kolok_zad7 aud_24-25/ispitni_mk/vtor_kolok_zad7.cpp)
add_executable(vtor_kolok_zad8 aud_24-25/ispitni_mk/vtor_kolok_zad8.cpp)
add_executable(vtor_kolok_zad9 aud_24-25/ispitni_mk/vtor_kolok_zad9.cpp)
add_executable(vtor_kolok_zad10 aud_24-25/ispitni_mk/vtor_kolok_zad10.cpp)
add_executable(vtor_kolok_zad11 aud_24-25/ispitni_mk/vtor_kolok_zad11.cpp)
add_executable(vtor_kolok_zad12 aud_24-25/ispitni_mk/vtor_kolok_zad12.cpp)
add_executable(vtor_kolok_zad13 aud_24-25/ispitni_mk/vtor_kolok_zad13.cpp)
add_executable(vtor_kolok_zad14 aud_24-25/ispitni_mk/vtor_kolok_zad14.cpp)
add_executable(vtor_kolok_zad15 aud_24-25/ispitni_mk/vtor_kolok_zad15.cpp)
add_executable(vtor_kolok_zad16 aud_24-25/ispitni_mk/vtor_kolok_zad16.cpp)
add_executable(vtor_kolok_zad17 aud_24-25/ispitni_mk/vtor_kolok_zad17.cpp)

#vtor kolokvium and ispitni courses resheni (eng)
add_executable(vtor_kolok_zad1_eng aud_24-25/ispitni_eng/vtor_kolok_zad1_eng.cpp)
add_executable(vtor_kolok_zad2_eng aud_24-25/ispitni_eng/vtor_kolok_zad2_eng.cpp)
add_executable(vtor_kolok_zad3_eng aud_24-25/ispitni_eng/vtor_kolok_zad3_eng.cpp)
add_executable(vtor_kolok_zad4_eng aud_24-25/ispitni_eng/vtor_kolok_zad4_eng.cpp)
add_executable(vtor_kolok_zad5_eng aud_24-25/ispitni_eng/vtor_kolok_zad5_eng.cpp)
add_executable(vtor_kolok_zad6_eng aud_24-25/ispitni_eng/vtor_kolok_zad6_eng.cpp)
add_executable(vtor_kolok_zad7_eng aud_24-25/ispitni_eng/vtor_kolok_zad7_eng.cpp)
add_executable(vtor_kolok_zad8_eng aud_24-25/ispitni_eng/vtor_kolok_zad8_eng.cpp)
add_executable(vtor_kolok_zad9_eng aud_24-25/ispitni_eng/vtor_kolok_zad9_eng.cpp)
add_executable(vtor_kolok_zad10_eng aud_24-25/ispitni_eng/vtor_kolok_zad10_eng.cpp)
add_executable(vtor_kolok_zad11_eng aud_24-25/ispitni_eng/vtor_kolok_zad11_eng.cpp)
add_executable(vtor_kolok_zad12_eng aud_24-25/ispitni_eng/vtor_kolok_zad12_eng.cpp)
add_executable(vtor_kolok_zad13_eng aud_24-25/ispitni_eng/vtor_kolok_zad13_eng.cpp)
add_executable(vtor_kolok_zad14_eng aud_24-25/ispitni_eng/vtor_kolok_zad14_eng.cpp)
add_executable(vtor_kolok_zad15_eng aud_24-25/ispitni_eng/vtor_kolok_zad15_eng.cpp)
add_executable(vtor_kolok_zad16_eng aud_24-25/ispitni_eng/vtor_kolok_zad16_eng.cpp)
add_executable(vtor_kolok_zad17_eng aud_24-25/ispitni_eng/vtor_kolok_zad17_eng.cpp)
add_executable(vtor_kolok_zad18_eng aud_24-25/ispitni_eng/vtor_kolok_zad18_eng.cpp)
add_executable(vtor_kolok_zad19_eng aud_24-25/ispitni_eng/vtor_kolok_zad19_eng.cpp)
add_executable(vtor_kolok_zad20_eng aud_24-25/ispitni_eng/vtor_kolok_zad20_eng.cpp)
add_executable(vtor_kolok_zad21_eng aud_24-25/ispitni_eng/vtor_kolok_zad21_eng.cpp)
add_executable(vtor_kolok_zad22_eng aud_24-25/ispitni_eng/vtor_kolok_zad22_eng.cpp)
add_executable(vtor_kolok_zad23_eng aud_24-25/ispitni_eng/vtor_kolok_zad23_eng.cpp)
add_executable(vtor_kolok_zad24_eng aud_24-25/ispitni_eng/vtor_kolok_zad24_eng.cpp)
add_executable(vtor_kolok_zad25_eng aud_24-25/ispitni_eng/vtor_kolok_zad25_eng.cpp)
add_executable(vtor_kolok_zad26_eng aud_24-25/ispitni_eng/vtor_kolok_zad26_eng.cpp)
add_executable(vtor_kolok_zad27_eng aud_24-25/ispitni_eng/vtor_kolok_zad27_eng.cpp)
add_executable(vtor_kolok_zad28_eng aud_24-25/ispitni_eng/vtor_kolok_zad28_eng.cpp)