cmake_minimum_required(VERSION 3.29)
project(oop23_24)

set(CMAKE_CXX_STANDARD 20)

#labs
add_executable(labs1.1 labs_24-25/labs1.1.cpp)
add_executable(labs1.2 labs_24-25/labs1.2.cpp)
add_executable(labs1.3 labs_24-25/labs1.3.cpp)

add_executable(labs2.1 labs_24-25/labs2.1.cpp)
add_executable(labs2.2 labs_24-25/labs2.2.cpp)
add_executable(labs2.3 labs_24-25/labs2.3.cpp)

add_executable(labs3.1 labs_24-25/labs3.1.cpp)
add_executable(labs3.2 labs_24-25/labs3.2.cpp)
add_executable(labs3.3 labs_24-25/labs3.3.cpp)
add_executable(labs3.4 labs_24-25/labs3.4.cpp)
add_executable(labs3.5 labs_24-25/labs3.5.cpp)

add_executable(labs4.1 labs_24-25/labs4.1.cpp)
add_executable(labs4.2 labs_24-25/labs4.2.cpp)
add_executable(labs4.3 labs_24-25/labs4.3.cpp)
add_executable(labs4.4 labs_24-25/labs4.4.cpp)
add_executable(labs4.5 labs_24-25/labs4.5.cpp)

add_executable(labs5.1 labs_24-25/labs5.1.cpp)
add_executable(labs5.2 labs_24-25/labs5.2.cpp)
add_executable(labs5.3 labs_24-25/labs5.3.cpp)
add_executable(labs5.4 labs_24-25/labs5.4.cpp)

add_executable(labs6.1 labs_24-25/labs6.1.cpp)
add_executable(labs6.2 labs_24-25/labs6.2.cpp)

add_executable(labs7.1 labs_24-25/labs7.1.cpp)
add_executable(labs7.2 labs_24-25/labs7.2.cpp)
add_executable(labs7.3 labs_24-25/labs7.3.cpp)
add_executable(labs7.4 labs_24-25/labs7.4.cpp)
add_executable(labs7.5 labs_24-25/labs7.5.cpp)
add_executable(labs7.6 labs_24-25/labs7.6.cpp)

add_executable(labs8.1 labs_24-25/labs8.1.cpp)
add_executable(labs8.2 labs_24-25/labs8.2.cpp)

add_executable(labs9.1 labs_24-25/labs9.1.cpp)
add_executable(labs9.2 labs_24-25/labs9.2.cpp)
add_executable(labs9.3 labs_24-25/labs9.3.cpp)
add_executable(labs9.4 labs_24-25/labs9.4.cpp)

add_executable(aud_stefan_08-05-2025_zad1 aud_stefan_08-05-2025/zad1.cpp)
add_executable(aud_stefan_08-05-2025_zad2 aud_stefan_08-05-2025/zad2.cpp)
add_executable(aud_stefan_08-05-2025_zad3 aud_stefan_08-05-2025/zad3.cpp)

add_executable(aud_stefan_15-05-2025_zad1.cpp aud_stefan_15-05-2025/zad1.cpp)
add_executable(aud_stefan_15-05-2025_zad2.cpp aud_stefan_15-05-2025/zad2.cpp)
add_executable(aud_stefan_15-05-2025_zad3.cpp aud_stefan_15-05-2025/zad3.cpp)

add_executable(zad_lani_vtor_kolokvium_23-24_zad1.cpp zad_lani_vtor_kolokvium_23-24/zad1.cpp)
add_executable(zad_lani_vtor_kolokvium_23-24_zad2.cpp zad_lani_vtor_kolokvium_23-24/zad2.cpp)
add_executable(zad_lani_vtor_kolokvium_23-24_zad3.cpp zad_lani_vtor_kolokvium_23-24/zad3.cpp)
add_executable(zad_lani_vtor_kolokvium_23-24_zad4.cpp zad_lani_vtor_kolokvium_23-24/zad4.cpp)

add_executable(zad_lani_juni_ispit_23-24_zad1.cpp zad_lani_juni_ispit_23-24/zad1.cpp)
add_executable(zad_lani_juni_ispit_23-24_zad2.cpp zad_lani_juni_ispit_23-24/zad2.cpp)

#aud per kolokviume
add_executable(zad_kval_prv_kolokvium_aud aud_prv_kolokvium/zad_kval_prv_kolokvium_aud.cpp)
add_executable(zad1_prv_kolokvium_aud_no_main aud_prv_kolokvium/zad1_prv_kolokvium_aud_no_main.cpp)
add_executable(zad2_prv_kolokvium_aud_with_main aud_prv_kolokvium/zad2_prv_kolokvium_aud_with_main.cpp)

#kvalifikaciski za kolokvium resheni
add_executable(zad1_kvali_firstmidterm kvali_prv_kolok_courses/zad1_kvali_firstmidterm.cpp)
add_executable(zad2_kvali_firstmidterm kvali_prv_kolok_courses/zad2_kvali_firstmidterm.cpp)
add_executable(zad3_kvali_firstmidterm kvali_prv_kolok_courses/zad3_kvali_firstmidterm.cpp)
add_executable(zad4_kvali_firstmidterm kvali_prv_kolok_courses/zad4_kvali_firstmidterm.cpp)
add_executable(zad5_kvali_firstmidterm kvali_prv_kolok_courses/zad5_kvali_firstmidterm.cpp)
add_executable(zad6_kvali_firstmidterm kvali_prv_kolok_courses/zad6_kvali_firstmidterm.cpp)

#kolokviumski resheni
add_executable(prv_kolok_zad1 prv_kolok_zad_courses/prv_kolok_zad1.cpp)
add_executable(prv_kolok_zad2 prv_kolok_zad_courses/prv_kolok_zad2.cpp)
add_executable(prv_kolok_zad3 prv_kolok_zad_courses/prv_kolok_zad3.cpp)
add_executable(prv_kolok_zad4 prv_kolok_zad_courses/prv_kolok_zad4.cpp)
add_executable(prv_kolok_zad5 prv_kolok_zad_courses/prv_kolok_zad5.cpp)
add_executable(prv_kolok_zad6 prv_kolok_zad_courses/prv_kolok_zad6.cpp)
add_executable(prv_kolok_zad7 prv_kolok_zad_courses/zad1_eng.cpp)
add_executable(prv_kolok_zad8 prv_kolok_zad_courses/prv_kolok_zad8.cpp)
add_executable(prv_kolok_zad9 prv_kolok_zad_courses/prv_kolok_zad9.cpp)
add_executable(prv_kolok_zad10 prv_kolok_zad_courses/prv_kolok_zad10.cpp)
add_executable(prv_kolok_zad11 prv_kolok_zad_courses/prv_kolok_zad11.cpp)
add_executable(prv_kolok_zad12 prv_kolok_zad_courses/prv_kolok_zad12.cpp)
add_executable(prv_kolok_zad13 prv_kolok_zad_courses/prv_kolok_zad13.cpp)
add_executable(prv_kolok_zad14 prv_kolok_zad_courses/prv_kolok_zad14.cpp)
add_executable(prv_kolok_zad15 prv_kolok_zad_courses/prv_kolok_zad15.cpp)
add_executable(prv_kolok_zad16 prv_kolok_zad_courses/prv_kolok_zad16.cpp)
add_executable(prv_kolok_zad17 prv_kolok_zad_courses/prv_kolok_zad17.cpp)
add_executable(prv_kolok_zad18 prv_kolok_zad_courses/prv_kolok_zad18.cpp)
add_executable(prv_kolok_zad19 prv_kolok_zad_courses/prv_kolok_zad19.cpp)
add_executable(prv_kolok_zad20 prv_kolok_zad_courses/prv_kolok_zad20.cpp)
add_executable(prv_kolok_zad21 prv_kolok_zad_courses/prv_kolok_zad21.cpp)
add_executable(prv_kolok_zad22 prv_kolok_zad_courses/prv_kolok_zad22.cpp)

#kvalifikaciski za ispit resheni
add_executable(zad1_kvali_isp kvali_ispiti_courses/zad1_kvali_isp.cpp)
add_executable(zad2_kvali_isp kvali_ispiti_courses/zad2_kvali_isp.cpp)
add_executable(zad3_kvali_isp kvali_ispiti_courses/zad3_kvali_isp.cpp)
add_executable(zad4_kvali_isp kvali_ispiti_courses/zad4_kvali_isp.cpp)
add_executable(zad5_kvali_isp kvali_ispiti_courses/zad5_kvali_isp.cpp)
add_executable(zad6_kvali_isp kvali_ispiti_courses/zad6_kvali_isp.cpp)
add_executable(zad7_kvali_isp kvali_ispiti_courses/zad7_kvali_isp.cpp)
add_executable(zad8_kvali_isp kvali_ispiti_courses/zad8_kvali_isp.cpp)
add_executable(zad9_kvali_isp kvali_ispiti_courses/zad9_kvali_isp.cpp)

#vtor kolokvium and ispitni courses resheni (mk)
add_executable(vtor_kolok_zad1 ispitni_mk/vtor_kolok_zad1.cpp)
add_executable(vtor_kolok_zad2 ispitni_mk/vtor_kolok_zad2.cpp)
add_executable(vtor_kolok_zad3 ispitni_mk/vtor_kolok_zad3.cpp)
add_executable(vtor_kolok_zad4 ispitni_mk/vtor_kolok_zad4.cpp)
add_executable(vtor_kolok_zad5 ispitni_mk/vtor_kolok_zad5.cpp)
add_executable(vtor_kolok_zad6 ispitni_mk/vtor_kolok_zad6.cpp)
add_executable(vtor_kolok_zad7 ispitni_mk/vtor_kolok_zad7.cpp)
add_executable(vtor_kolok_zad8 ispitni_mk/vtor_kolok_zad8.cpp)
add_executable(vtor_kolok_zad9 ispitni_mk/vtor_kolok_zad9.cpp)
add_executable(vtor_kolok_zad10 ispitni_mk/vtor_kolok_zad10.cpp)
add_executable(vtor_kolok_zad11 ispitni_mk/vtor_kolok_zad11.cpp)
add_executable(vtor_kolok_zad12 ispitni_mk/vtor_kolok_zad12.cpp)
add_executable(vtor_kolok_zad13 ispitni_mk/vtor_kolok_zad13.cpp)
add_executable(vtor_kolok_zad14 ispitni_mk/vtor_kolok_zad14.cpp)
add_executable(vtor_kolok_zad15 ispitni_mk/vtor_kolok_zad15.cpp)
add_executable(vtor_kolok_zad16 ispitni_mk/vtor_kolok_zad16.cpp)
add_executable(vtor_kolok_zad17 ispitni_mk/vtor_kolok_zad17.cpp)

#vtor kolokvium and ispitni courses resheni (eng)
add_executable(vtor_kolok_zad1_eng ispitni_eng/vtor_kolok_zad1_eng.cpp)
add_executable(vtor_kolok_zad2_eng ispitni_eng/vtor_kolok_zad2_eng.cpp)
add_executable(vtor_kolok_zad3_eng ispitni_eng/vtor_kolok_zad3_eng.cpp)
add_executable(vtor_kolok_zad4_eng ispitni_eng/vtor_kolok_zad4_eng.cpp)
add_executable(vtor_kolok_zad5_eng ispitni_eng/vtor_kolok_zad5_eng.cpp)
add_executable(vtor_kolok_zad6_eng ispitni_eng/vtor_kolok_zad6_eng.cpp)
add_executable(vtor_kolok_zad7_eng ispitni_eng/vtor_kolok_zad7_eng.cpp)
add_executable(vtor_kolok_zad8_eng ispitni_eng/vtor_kolok_zad8_eng.cpp)
add_executable(vtor_kolok_zad9_eng ispitni_eng/vtor_kolok_zad9_eng.cpp)
add_executable(vtor_kolok_zad10_eng ispitni_eng/vtor_kolok_zad10_eng.cpp)
add_executable(vtor_kolok_zad11_eng ispitni_eng/vtor_kolok_zad11_eng.cpp)
add_executable(vtor_kolok_zad12_eng ispitni_eng/vtor_kolok_zad12_eng.cpp)
add_executable(vtor_kolok_zad13_eng ispitni_eng/vtor_kolok_zad13_eng.cpp)
add_executable(vtor_kolok_zad14_eng ispitni_eng/vtor_kolok_zad14_eng.cpp)
add_executable(vtor_kolok_zad15_eng ispitni_eng/vtor_kolok_zad15_eng.cpp)
add_executable(vtor_kolok_zad16_eng ispitni_eng/vtor_kolok_zad16_eng.cpp)
add_executable(vtor_kolok_zad17_eng ispitni_eng/vtor_kolok_zad17_eng.cpp)
add_executable(vtor_kolok_zad18_eng ispitni_eng/vtor_kolok_zad18_eng.cpp)
add_executable(vtor_kolok_zad19_eng ispitni_eng/vtor_kolok_zad19_eng.cpp)
add_executable(vtor_kolok_zad20_eng ispitni_eng/vtor_kolok_zad20_eng.cpp)
add_executable(vtor_kolok_zad21_eng ispitni_eng/vtor_kolok_zad21_eng.cpp)
add_executable(vtor_kolok_zad22_eng ispitni_eng/vtor_kolok_zad22_eng.cpp)
add_executable(vtor_kolok_zad23_eng ispitni_eng/vtor_kolok_zad23_eng.cpp)
add_executable(vtor_kolok_zad24_eng ispitni_eng/vtor_kolok_zad24_eng.cpp)
add_executable(vtor_kolok_zad25_eng ispitni_eng/vtor_kolok_zad25_eng.cpp)
add_executable(vtor_kolok_zad26_eng ispitni_eng/vtor_kolok_zad26_eng.cpp)
add_executable(vtor_kolok_zad27_eng ispitni_eng/vtor_kolok_zad27_eng.cpp)
add_executable(vtor_kolok_zad28_eng ispitni_eng/vtor_kolok_zad28_eng.cpp)

